# erc8004-a2a-case-study

./: .env.example  .gitignore  CLAUDE.md  README.md  cmd.md  progress_report.md  pyproject.toml
analysis/: README.md  core_contributors.csv  cross_case_overlap.csv  gitvote_analysis.md  network_edges_a2a.csv  network_edges_a2a_full.csv  network_edges_a2a_top50.csv  network_edges_erc8004.csv  network_metrics_table.csv  network_nodes_a2a.csv  network_nodes_a2a_full.csv  network_nodes_erc8004.csv  structural_metrics.csv
data/: README.md
data/raw/: a2a_prs.json  (+15 more)
human-notes/: author.md  findings_summary.md  gitvote_analysis_2.md  list_pr_numbers.py  paper.md  tasks-for-cc.md  tasks.md  work.md
output/: README.md  findings_summary.md  network_a2a.html  network_compare.html  network_erc8004.html  network_metrics.json  topic_stats.json
paper/: DATA_AND_METRICS.md  RQ1.tex  data_interpretation.md  references.md
reports/: INDEX.md  R01_2026-03-10_数据采集与基础设施.md  R02_2026-03-10_数据清洗与A2A采集.md  R03_2026-03-11_LLM标注与API测试.md  R04_2026-03-12_LLM标注结果与治理指标.md  R05_2026-03-13_利益相关者画像与关系网络.md  R06_2026-03-14_任务清单完成与论文草稿.md  R07_2026-03-14_机构归属人工调查.md
scripts/: README.md  analyze_network.py  analyze_topic.py  analyze_voting_mechanism.py  annotate_gitvote.py  annotate_llm.py  build_network.py  enrich_institutions.py  enrich_profiles.py  identify_core_contributors.py  patch_a2a_missing_pages.py  rebuild_a2a_network_full.py  scrape_a2a.py  scrape_a2a_discussions.py  scrape_erc8004.py  scrape_erc8004_forum.py  scrape_erc8004_prs.py  scrape_gitvote_prs.py  verify_annotation_coverage.py
(+95 files in other folders)
